# AnaliseNoticias

./: README.md  pyproject.toml
src/: extract.py  main.py  transform.py
